# anirecs

./: .gitignore  pyproject.toml
anirecs/: config.py  main.py  models.py  oauth2.py  schemas.py
anirecs/routers/: anime.py  auth.py  favourite.py  genre.py  genreAnime.py  preference.py  user.py
